<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_pink_rect"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_search" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_network_name"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/iv_search_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_text_clean"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_choose_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/choose_city"
        app:layout_constraintEnd_toStartOf="@id/tv_choose_city_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_search" />

    <TextView
        android:id="@+id/tv_choose_city_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:gravity="center"
        android:text="广州"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_search" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/line_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_choose_city"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_city" />

    <TextView
        android:id="@+id/tv_network_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/network_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <ListView
        android:id="@+id/lv_network_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_gray_rect"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_network_list" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_btn_rect_red"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lv_network_list" />

</androidx.constraintlayout.widget.ConstraintLayout>