<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#F9F9F9"
        android:padding="5dp"
        android:text="@string/basic_info"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#E4E4E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_basic_info" />

    <TextView
        android:id="@+id/tv_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:padding="5dp"
        android:text="@string/sdk_version"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/tv_sdk_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/default_sdk_version"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_version_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline" />


    <TextView
        android:id="@+id/tv_server_addr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:padding="5dp"
        android:text="@string/server_addr"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_sdk_version" />

    <EditText
        android:id="@+id/et_server_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/default_server_addr"
        android:padding="5dp"
        android:text="@string/default_server_addr"
        android:textSize="12dp"
        android:inputType="textWebEmailAddress"
        android:textCursorDrawable="@drawable/edittext_cursor"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_server_addr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_sdk_version" />

    <ImageView
        android:id="@+id/iv_address_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_text_clean"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_server_address"
        app:layout_constraintEnd_toEndOf="@id/line4"
        app:layout_constraintTop_toTopOf="@id/et_server_address" />

    <View
        android:id="@+id/line4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="5dp"
        android:background="@color/gray_f2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_sdk_version"
        app:layout_constraintTop_toBottomOf="@id/et_server_address" />


    <TextView
        android:id="@+id/tv_server_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/port"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_server_addr" />

    <EditText
        android:id="@+id/et_server_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/default_server_port"
        android:inputType="number"
        android:padding="5dp"
        android:text="@string/default_server_port"
        android:textSize="12dp"
        android:textCursorDrawable="@drawable/edittext_cursor"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_server_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/et_server_address" />

    <ImageView
        android:id="@+id/iv_port_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_text_clean"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_server_port"
        app:layout_constraintEnd_toEndOf="@id/line5"
        app:layout_constraintTop_toTopOf="@id/et_server_port" />

    <View
        android:id="@+id/line5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="5dp"
        android:background="@color/gray_f2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_server_address"
        app:layout_constraintTop_toBottomOf="@id/et_server_port" />

    <TextView
        android:id="@+id/tv_demo_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#F9F9F9"
        android:padding="5dp"
        android:text="演示流程设置"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_server_port" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#E4E4E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_demo_process" />

    <TextView
        android:id="@+id/tv_living_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="活体检测环节"
        app:layout_constraintEnd_toStartOf="@id/switch_living_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <Switch
        android:id="@+id/switch_living_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:thumb="@drawable/switch_thumb_selector"
        android:track="@drawable/switch_track_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#E4E4E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_living_check" />

    <TextView
        android:id="@+id/tv_risk_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="风险播报环节"
        app:layout_constraintEnd_toStartOf="@id/switch_living_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <Switch
        android:id="@+id/switch_risk_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:thumb="@drawable/switch_thumb_selector"
        android:track="@drawable/switch_track_selector"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>